# betting-league-championship

./: .env.dev  .gitignore  .gitleaks.toml  API_TESTING_GUIDE.md  CONFIDENCE_REMOVAL_SUMMARY.md  DATABASE_FIELD_ANALYSIS.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_TEST_GUIDE.md  DEPLOYMENT_TEST_RESULTS.md  DEV-SCRIPTS.md  DOCKER_DEV_README.md  ENHANCED_FIELD_CONSISTENCY.md  ENUM_CONSISTENCY_ANALYSIS.md  ENUM_FIXES_COMPLETED.md  ENUM_INVESTIGATION_REPORT.md  ENUM_INVESTIGATION_SUMMARY.md  FIELD_NAMING_CONSISTENCY.md  FONTAWESOME_CDN_USAGE.md  FONTAWESOME_ICON_MAPPING.md  FONTAWESOME_INTEGRATION_GUIDE.md  FONTAWESOME_SECURITY_SETUP.md  KEYCLOAK_TESTING.md  POSTMAN_ENUM_VALIDATION.md  PREDICTION_SYSTEM_REFACTORING.md  PR_DESCRIPTION.md  RECREATE_SPEC_PROMPT.md  REFACTORING_SUCCESS_SUMMARY.md  TDD_GREEN_PHASE_COMPLETION_REPORT.md  build-with-env.sh  deploy-dev.sh  detailed_enum_analysis.py  docker-compose.dev.yml  enhanced_field_analysis.py  enum_consistency_analysis.py  enum_validation_test.py  field_analysis.py  field_naming_consistency_analysis.py  fix_auth_imports.py  fix_keycloak_sub_field.py  init-db.sql  (+17 more)
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md
backend/: .dockerignore  API_ECOSYSTEM_COMPLETE.md  AUDIT_LOGS_API_SUMMARY.md  BET_API_SUMMARY.md  FINAL_complete_world_cup_seeder.py  RESULTS_API_SUMMARY.md  alembic.ini  bundesliga_2025_26_seeder.py  bundesliga_competition.json  bundesliga_matches.json  bundesliga_teams.json  clean_database.py  complete_data_seeder.py  create_tables.py  docker-entrypoint.sh  main.py  migrate_bet_model.py  pyproject.toml  pytest.ini  real_bundesliga_fetcher.py  remove_confidence_migration.py  seed_data.py  standalone_seeder.py
backend/alembic/: env.py
backend/alembic/versions/: 2025_10_05_1407-9d0a64312e2a_create_tables_without_circular_foreign_.py  2025_10_07_0753-a167ee1a38e4_initial_database_schema.py
backend/docker/: Dockerfile.dev  Dockerfile.prod
backend/requirements/: base.txt  dev.txt  prod.txt  test.txt
backend/src/: __init__.py  database.py
backend/src/api/: __init__.py
backend/src/api/endpoints/: __init__.py
backend/src/api/schemas/: __init__.py  audit_log.py  auth.py  bet.py  competition.py  group.py  group_membership.py  match.py  player.py  prediction.py  result.py  season.py  sport.py  team.py  user.py
backend/src/api/v1/: __init__.py
backend/src/api/v1/endpoints/: __init__.py  audit_logs.py  auth.py  bets.py  competitions.py  group_memberships.py  groups.py  keycloak_auth.py  matches.py  players.py  predictions.py  results.py  seasons.py  sports.py  teams.py  users.py
backend/src/core/: __init__.py  config.py  database.py  exceptions.py  keycloak_security.py  security.py  utils.py
backend/src/models/: __init__.py  audit_log.py  base.py  bet.py  competition.py  group.py  group_membership.py  match.py  player.py  result.py  season.py  sport.py  team.py  user.py
backend/src/services/: __init__.py  audit_log_service.py  bet_service.py  competition_service.py  group_membership_service.py  group_service.py  keycloak_service.py  match_service.py  player_service.py  prediction_service.py  result_service.py  season_service.py  sport_service.py  team_service.py  user_service.py
backend/tests/: conftest.py  test_predictions.py
backend/tests/api/: test_audit_logs.py  test_group_memberships.py
backend/tests/contract/: test_auth_api.py  test_betting_api.py  test_competitions_api.py  test_groups_api.py  test_leaderboard_api.py  test_matches_api.py  test_sports_api.py  test_users_api.py  test_websocket_api.py
backend/tests/integration/: test_audit_logs_integration.py
backend/tests/models/: test_audit_log_model.py  test_bet_model.py  test_competition_model.py  test_group_membership_model.py  test_group_model.py  test_match_model.py  test_player_model.py  test_result_model.py  test_season_model.py  test_sport_model.py  test_team_model.py  test_user_model.py
docs/: Betting_League_Championship_API.postman_collection.json  Betting_League_Championship_Development.postman_environment.json  Betting_League_Championship_Production.postman_environment.json  DEVELOPER_MANUAL.html  (+4 more)
(+80 files in other folders)
